--- a/Desktop/Desktop/Pages/CustomerList.html
+++ b/Desktop/Desktop/Pages/CustomerList.html
@@ -59,380 +59,10 @@
         };
         firebase.initializeApp(config);
     </script>
-    <style>
-
-
-        #head {
-            list-style-type: none;
-            overflow: hidden;
-            background-color: LightGray;
-            border-style: solid;
-            border-color: #92a8d1;
-            margin-top: 0px;
-        }
-
-        li {
-            float: left;
-        }
-
-            li a {
-                display: block;
-                color: black;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
-            }
-
-                li a:hover {
-                    background-color: #5195A8;
-                }
-
-        @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700');
-
-        table.dataTable tbody th, table.dataTable tbody td {
-            padding: 6px 70px 0px 10px;
-            text-align: left;
-            float: unset;
-            color: black;
-        }
-
-        body {
-            background: url('http://all4desktop.com/data_images/original/4236532-background-images.jpg');
-            font-family: 'Roboto Condensed', sans-serif;
-            color: #262626;
-            margin: 5% 0;
-        }
-
-        .container {
-            width: 100%;
-            padding-right: 15px;
-            padding-left: 15px;
-            margin-right: auto;
-            margin-left: auto;
-        }
-
-        @media (min-width: 1200px) {
-            .container {
-                max-width: 1140px;
-            }
-        }
-
-        .d-flex {
-            display: flex;
-            flex-direction: row;
-            background: #f6f6f6;
-            border-radius: 0 0 5px 5px;
-            padding: 25px;
-        }
-
-        form {
-            flex: 4;
-        }
-
-        .Yorder {
-            flex: 2;
-        }
-
-        .title {
-            background: -webkit-gradient(linear, left top, right bottom, color-stop(0, #5195A8), color-stop(100, #70EAFF));
-            background: -moz-linear-gradient(top left, #5195A8 0%, #70EAFF 100%);
-            background: -ms-linear-gradient(top left, #5195A8 0%, #70EAFF 100%);
-            background: -o-linear-gradient(top left, #5195A8 0%, #70EAFF 100%);
-            background: linear-gradient(to bottom right, #5195A8 0%, #70EAFF 100%);
-            border-radius: 5px 5px 0 0;
-            padding: 20px;
-            color: #f6f6f6;
-        }
-
-        h2 {
-            margin: 0;
-            padding-left: 15px;
-        }
-
-        .required {
-            color: red;
-        }
-
-
-
-        label > span {
-            float: left;
-            width: 25%;
-            margin-top: 12px;
-            padding-right: 10px;
-        }
-
-        input[type="text"], input[type="tel"], input[type="email"], select {
-            width: 70%;
-            height: 30px;
-            padding: 5px 10px;
-            margin-bottom: 10px;
-            border: 1px solid #dadada;
-            color: #888;
-        }
-
-        select {
-            width: 72%;
-            height: 45px;
-            padding: 5px 10px;
-            margin-bottom: 10px;
-        }
-
-
-        table {
-            margin: 0;
-            padding: 0;
-        }
-
-        th {
-            border-bottom: 1px solid #dadada;
-            padding: 10px 0;
-        }
-
-        tr > td:nth-child(1) {
-            text-align: left;
-            color: #2d2d2a;
-        }
-
-        tr > td:nth-child(2) {
-            text-align: right;
-            color: #52ad9c;
-        }
-
-        td {
-            border-bottom: 1px solid #dadada;
-            padding: 25px 25px 25px 0;
-        }
-
-        p {
-            display: block;
-            color: #888;
-            margin: 0;
-            padding-left: 25px;
-        }
-
-        .Yorder > div {
-            padding: 15px 0;
-        }
-
-        button {
-            width: 7%;
-            margin-top: 10px;
-            padding: 10px;
-            border: none;
-            border-radius: 30px;
-            background: #52ad9c;
-            color: #fff;
-            font-size: 10px;
-            font-weight: bold;
-        }
-
-            button:hover {
-                cursor: pointer;
-                background: #428a7d;
-            }
-
-
-
-        .fab {
-            width: 70px;
-            height: 70px;
-            background-color: red;
-            border-radius: 50%;
-            box-shadow: 0 6px 10px 0 #666;
-            transition: all 0.1s ease-in-out;
-            font-size: 50px;
-            color: white;
-            text-align: center;
-            line-height: 70px;
-            position: fixed;
-            right: 50px;
-            bottom: 50px;
-        }
-
-            .fab:hover {
-                box-shadow: 0 6px 14px 0 #666;
-                transform: scale(1.05);
-            }
-    </style>
-    <script>
-        $(document).ready(function () {
-            Navbar();
-            ajaxCall("GET", "../api/Customer", "", getSuccess, error);
-        });
-        function Navbar() {
-            var user = JSON.parse(localStorage.getItem('data'));
-
-
-            if (user.ISAdmin == 1) {
-
-                $("#navbaritem").show();
-                $("#navuser").show();
-            }
-        }
-        //function buttonEvents() {
-
-        //    //delete
-        //    $(document).on("click", ".deletebtn", function () {
-
-        //        markSelected(this);
-        //        var customer = this.getAttribute('data-cust');
-
-        //        swal({ // this will open a dialouge
-        //            title: "Are you sure ??",
-        //            text: "",
-        //            icon: "warning",
-        //            buttons: true,
-        //            dangerMode: true
-        //        })
-        //            .then(function (willDelete) {
-        //                if (willDelete) DeleteUser(customer);
-        //                else swal("Not Deleted!");
-        //            });
-        //    });
-        //}
-        //function markSelected(btn) {
-        //    $("#customertable tr").removeClass("selected"); // remove seleced class from rows that were selected before
-        //    row = (btn.parentNode).parentNode; // button is in TD which is in Row
-        //    row.className = 'selected'; // mark as selected
-        //}
-        //function DeleteUser(customer) {
-        //    console.log(customer);
-        //    ajaxCall("Delete", "../api/Customer?email=" + customer, "", deleteSuccess, deleteerror);
-        //}
-        //function deleteSuccess(CustomerData) {
-
-        //    tbl.clear();
-        //    location.reload();
-        //    redrawTable(tbl, CustomerData);
-        //    console.log(Userdata);
-        //    buttonEvents(); // after redrawing the table, we must wire the new buttons
-        //    swal("Deleted Successfuly!", "Great Job", "success");
-
-        //}
-        //function deleteerror(err) {
-        //    swal("Error: " + err);
-        //}
-        //$(document).ready(function () {
-        //    $('#customertable').DataTable({
-
-        //    });
-        //});
-        function getSuccess(CustomerData) {
-            console.log(CustomerData)
-
-
-            try {
-
-                tbl = $('#customertable').DataTable({
-                    data: CustomerData,
-                    pageLength: 5,
-                    dom: 'Bfrtip',
-                    buttons: [
-                        'copy', 'csv', 'excel', 'pdf', 'print'
-                    ],
-                    columns: [
-
-                        { data: "Email" },
-
-                        {
-                            data: "Address",
-                            render: function (data, type, row, meta) {
-                                str = "";
-                                for (var i = 0; i < data.length; i++) {
-
-                                    str += "<p>" + data[i].FirstName + "</p>";
-
-                                }
-                                return str;
-                            }
-
-                        },
-
-                        {
-                            data: "Address",
-                            render: function (data, type, row, meta) {
-                                str = "";
-                                for (var i = 0; i < data.length; i++) {
-
-                                    str += "<p>" + data[i].LastName + "</p>";
-
-                                }
-                                return str;
-                            }
-                        },
-                        {
-                            data: "Address",
-                            render: function (data, type, row, meta) {
-                                str = "";
-                                for (var i = 0; i < data.length; i++) {
-
-                                    str += "<p>" + data[i].City + "</p>";
-
-                                }
-                                return str;
-                            }
-                        },
-                        {
-                            data: "Address",
-                            render: function (data, type, row, meta) {
-                                str = "";
-                                for (var i = 0; i < data.length; i++) {
-
-                                    str += "<p>" + data[i].Adress + "</p>";
-
-                                }
-                                return str;
-                            }
-                        },
-                        {
-                            data: "Address",
-                            render: function (data, type, row, meta) {
-                                str = "";
-                                for (var i = 0; i < data.length; i++) {
-
-                                    str += "<p>" + data[i].PhoneNumber + "</p>";
-
-                                }
-                                return str;
-                            }
-                        },
-                        {
-                            data: "Address",
-                            render: function (data, type, row, meta) {
-                                str = "";
-                                for (var i = 0; i < data.length; i++) {
-
-                                    str += "<p>" + data[i].CompanyName + "</p>";
-
-                                }
-                                return str;
-                            }
-                        },
-
-
-
-
-
-
-
-                    ],
-                });
-
-            }
-
-            catch (err) {
-                alert(err);
-            }
-
-        }
-
-        // this function is activated in case of a failure
-        function error(err) {
-            swal("Error: " + err);
-        }
-
-    </script>
+ 
+ 
+    <script src="../Scripts/customerlist.js"></script>
+    <link href="../style/CustomerList.css" rel="stylesheet" />
 </head>
 <body>
 
